# PiTrac

./: .gitignore  A Note On Images.md  Build-PiTrac.ps1  Build-PiTracCMD.ps1  Build-PiTracInline.ps1  Build-PiTracVS.ps1  Build-PiTracWithDevShell.ps1  Building-PiTrac.md  Check-VisualStudioComponents.ps1  Install-VSCppWorkload.ps1  LICENSE.ED_LIB.md  LICENSE.RPICAM-APPS.md  LICENSE.SHEDSKIN.md  PiTrac.vcxproj.template  README.md  Run-PiTrac.ps1  Setup-PiTracDev.ps1  Windows-Development.md  build-and-run-windows.ps1  build.psake.ps1  ci-test-integration.ps1  ci-test-integration.sh  clean-test-environment.ps1  clean-test-environment.sh  configure-boost-tests-linux.sh  configure-boost-tests-windows.ps1  configure-linux.sh  configure-windows.ps1  run-boost-tests-linux.sh  run-boost-tests-windows.ps1  run-tests-linux.sh  run-tests-windows-updated.ps1  run-tests-windows.ps1  run.psake.ps1  setup-code-coverage.ps1  simple_test_runner.ps1
Software/LM Source Code/ImageProcessing/: ED.cpp  EDColor.cpp  EDPF.cpp  EllipseDetectorYaed.cpp  EllipseDetectorYaed.h  ImageProcessing.vcxproj  ImageProcessing.vcxproj.filters  LICENSE.ED_Lib  LICENSE.RPICAM-APPS  Thumbs.db  ball_watcher.h  ball_watcher_image_buffer.cpp  ball_watcher_image_buffer.h  blocking_queue.h  camera_hardware.h  colorsys.cpp  cv_utils.h  golf_sim_config.json  gs_clubs.cpp  gs_config.cpp  gs_e6_interface.cpp  gs_e6_interface.h  gs_e6_results.cpp  gs_e6_results.h  gs_events.cpp  gs_events.h  gs_format_lib.h  gs_fsm.h  gs_globals.cpp  gs_globals.h  gs_gspro_interface.h  gs_gspro_test_server.cpp  gs_gspro_test_server.h  gs_ipc_mat.cpp  gs_ipc_message.cpp  gs_ipc_system.h  gs_ipc_test.h  gs_message_consumer.cpp  gs_message_producer.h  gs_options.cpp  (+14 more)
Software/LM Source Code/ImageProcessing/CameraTools/: lcGS.sh  lcV2.sh  previewGS_noir.sh  previewV2.sh  previewV2_640.sh  rcGS.sh  rcPi5GS.sh  setCameraCropModes.sh  setCameraTriggerExternal.sh  setCameraTriggerInternal.sh
Software/LM Source Code/ImageProcessing/RunScripts/: runCam1BallLocation.sh  runCam1Still.sh  runCam1Test.sh  runCam2.sh  runCam2Calibration.sh  runShutdown.sh  runTestExternalSimMessage.sh  runTestGsProServer.sh  runTestResults.sh  runTestSpin.sh
Software/LM Source Code/ImageProcessing/SimulatorAssets/TruGolf/: TruSimAPICustomSettings.json
Software/LM Source Code/ImageProcessing/core/: lc_logging.hpp  options.cpp  rpicam_app.cpp  rpicam_app.hpp
Software/LM Source Code/ImageProcessing/golfsim_tomee_webapp/: pom.xml
Software/LM Source Code/ImageProcessing/image/: dng.cpp
Software/LMSourceCode/ImageProcessing/: CMakeLists-tests-enhanced.txt  CMakeLists-tests.txt  CMakeLists.txt  ED.h  EDColor.cpp  EDPF.cpp  EllipseDetectorCommon.cpp  EllipseDetectorCommon.h  GolfSim.cpp  ImageProcessing.vcxproj  ImageProcessing.vcxproj.filters  LIBCAMERA_ARCHITECTURE.md  LICENSE.SHEDSKIN  REFACTORING_PLAN_camera_architecture.md  ball_image_proc.cpp  ball_image_proc.h  ball_watcher.cpp  boost_tests_enhanced.cpp  build.output.unix.txt  camera_hardware.cpp  camera_hardware.h  camera_sequence.md  camera_sequence.puml  colorsys.h  create_closed_source_objects.sh  cv_utils.cpp  cv_utils.h  golf_ball.cpp  golf_ball.h  golf_sim_config.json  gs_automated_testing.cpp  gs_automated_testing.h  gs_camera.cpp  gs_camera.h  gs_club_data.cpp  gs_club_data.h  gs_clubs.h  gs_config.cpp  gs_config.h  gs_e6_interface.cpp  (+49 more)
Software/LMSourceCode/ImageProcessing/Camera/: CMakeLists.txt  MIGRATION_GUIDE.md  MIGRATION_PLAN_STROBE_INFRA.md  README.md  USER_STORY_HIGHSPEED_CAMERA.md  build_tests.ps1  camera_platform.hpp
Software/LMSourceCode/ImageProcessing/Camera/domain/: camera_domain.hpp
Software/LMSourceCode/ImageProcessing/Camera/tests/: CMakeLists.txt  test_main.cpp  test_utilities.hpp
Software/LMSourceCode/ImageProcessing/CameraTools/: discoverPiCamLocation.sh  get_tuning_file.sh  imx296_noir.json  lc.sh  lcGS.sh  lcHQ.sh  preview.sh  previewGS.sh  take_calibration_shots.sh
Software/LMSourceCode/ImageProcessing/ImageAnalysis/: CMakeLists.txt  DEMO_SCRIPT.md  README.md  REFACTORING_PLAN.md  approve_changes.ps1  build_tests.ps1
Software/LMSourceCode/ImageProcessing/ImageAnalysis/application/: image_analysis_service.hpp
Software/LMSourceCode/ImageProcessing/ImageAnalysis/domain/: analysis_results.hpp  interfaces.hpp  value_objects.hpp
Software/LMSourceCode/ImageProcessing/ImageAnalysis/infrastructure/: ml_image_analyzer.hpp  opencv_image_analyzer.cpp  (+1 more)
Software/LMSourceCode/ImageProcessing/RunScripts/: runAutoCalibrateCam1.sh  runAutoCalibrateCam2.sh  runAutomatedTesting.sh  runCam1.sh  runCam1BallLocation.sh  runCam1Calibration.sh  runCam1ExternalStrobe.sh  runCam1Still.sh  runCam1StillSinglePi.sh  runCam2.sh  runCam2BallLocation.sh  runCam2ForAutoCalibration.sh  runCam2ForPi1Processing.sh  runCam2SinglePi.sh  runCam2Still.sh  runPiTracCommon.sh  runPulseTest.sh  runTestExternalSimMessage.sh  runTestResults.sh  shutdown_gs.sh
Software/LMSourceCode/ImageProcessing/assets/: motion_detect.json
Software/LMSourceCode/ImageProcessing/core/: CMakeLists.txt  completed_request.hpp  libcamera_encoder.hpp  libcamera_interface.hpp  libcamera_platform.hpp  libcamera_unix_impl.hpp  libcamera_windows_impl.hpp  logging.hpp  options.cpp  options.hpp  rpicam_app.cpp  rpicam_app.hpp  stream_info.hpp  video_options.hpp  windows_stub.cpp
Software/LMSourceCode/ImageProcessing/encoder/: CMakeLists.txt
Software/LMSourceCode/ImageProcessing/golfsim_tomee_webapp/: DEPLOYMENT.md  DOCKER-LICENSE-COMPLIANCE.md  Dockerfile  README.md  docker-compose.yml  pom.xml  refresh_from_dev.sh
Software/LMSourceCode/ImageProcessing/image/: CMakeLists.txt  image_stub.cpp
Software/LMSourceCode/ImageProcessing/output/: CMakeLists.txt  output.cpp  output.hpp
Software/LMSourceCode/ImageProcessing/post_processing_stages/: CMakeLists.txt  meson.build  motion_detect_stage.cpp  post_processing_stage.hpp
Software/LMSourceCode/ImageProcessing/preview/: CMakeLists.txt  preview.hpp
Software/LMSourceCode/ImageProcessing/windows-setup/: README.md  setup-boost.ps1  setup-environment.ps1  setup-opencv.ps1
docs/: Gemfile  (+4 more)
(+418 files in other folders)
